Fix spacing on home listing

--- a/src/client/Home.module.css
+++ b/src/client/Home.module.css
@@ -10,6 +10,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .DirectoryItem {
